--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
     "eslint": "^6.5.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2"
-  }
+  },
+  "dependencies": {}
 }
