--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
-    "name": "coursera",
-    "version": "0.0.1",
-    "description": "Programming work done for Coursera courses",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/raydot/coursera.git"
-    },
-    "keywords": [
-        "git",
-        "coursera",
-        "study",
-        "algorithms",
-        "computer",
-        "science"
-    ],
-    "author": "Dave Kanter <dave@davekanter.com> (http://www.davekanter.com/)",
-    "license": "Unlicense",
-    "bugs": {
-        "url": "https://github.com/raydot/coursera/issues"
-    },
-    "homepage": "https://github.com/raydot/coursera#readme",
-    "devDependencies": {
-        "acorn": ">=7.1.1",
-        "ansi-regex": ">=5.0.1",
-        "eslint": "^8.6.0",
-        "eslint-config-airbnb-base": "^14.0.0",
-        "eslint-plugin-import": "^2.18.2",
-        "glob-parent": ">=5.1.2",
-        "hosted-git-info": ">=2.8.9",
-        "minimist": ">=0.2.1",
-        "path-parse": ">=1.0.7"
-    },
-    "dependencies": {
-        "axios": ">=0.21.2",
-        "lodash": ">=4.17.21"
-    }
+  "name": "coursera",
+  "version": "0.0.1",
+  "description": "Programming work done for Coursera courses",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/raydot/coursera.git"
+  },
+  "keywords": [
+    "git",
+    "coursera",
+    "study",
+    "algorithms",
+    "computer",
+    "science"
+  ],
+  "author": "Dave Kanter <dave@davekanter.com> (http://www.davekanter.com/)",
+  "license": "Unlicense",
+  "bugs": {
+    "url": "https://github.com/raydot/coursera/issues"
+  },
+  "homepage": "https://github.com/raydot/coursera#readme",
+  "devDependencies": {
+    "acorn": ">=7.1.1",
+    "ansi-regex": ">=5.0.1",
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "glob-parent": ">=5.1.2",
+    "hosted-git-info": ">=2.8.9",
+    "minimist": ">=0.2.1",
+    "path-parse": ">=1.0.7",
+    "follow-redirects": ">=1.14.7"
+  },
+  "dependencies": {
+    "axios": ">=0.21.2",
+    "lodash": ">=4.17.21"
+  }
 }
